@@ -1,6 +1,7 @@
 ## Pre-requisite for this tutorial is docker
 
 * [Docker cheatsheet](https://github.com/mohanmca/MohanLearningGround/blob/master/src/main/md/Tools/docker.md)
+* [Dockerfile-3.11.10](https://github.com/docker-library/cassandra/blob/master/3.11/Dockerfile)
 
 ## Use Os-boxes as virtual machine to install cassandra
 
@@ -53,6 +54,7 @@ use cycling;
 
 ```bash
 docker exec -it cass2 bash
+docker exec -it cass2 cqlsh
 docker exec -it cass2 nodetool tpstats
 docker exec -it cass2 nodetool repair
 ```
@@ -192,10 +194,11 @@ COPY videos(video_id, added_date, title) FROM '/home/osboxes/Downloads/labwork/d
 ```
 
 ## References
+* [Dockerfile-3.11.10](https://github.com/docker-library/cassandra/blob/master/3.11/Dockerfile)
 * [Docker DSE](https://docs.datastax.com/en/docker/doc/docker/docker67/dockerDSE.html)
 * [Docker Setup](https://docs.datastax.com/en/docker/doc/docker/docker68/dockerReadme.html)
 * [DSE Docker setup on windows](https://www.datastax.com/blog/running-dse-microsoft-windows-using-docker)
-*[Cassandra Acadamy](https://academy.datastax.com/units/2012-quick-wins-dse-foundations-apache-cassandra?resource=ds201-datastax-enterprise-6-foundations-of-apache-cassandra)
+* [Cassandra Acadamy](https://academy.datastax.com/units/2012-quick-wins-dse-foundations-apache-cassandra?resource=ds201-datastax-enterprise-6-foundations-of-apache-cassandra)
 * [Datastax VM](https://s3.amazonaws.com/datastaxtraining/VM/DS201-VM-6.0.ova)
 * [Assets for course](https://academy.datastax.com/resources/ds201-datastax-enterprise-6-foundations-of-apache-cassandra)
 * [C:\Users\nikia\Dropbox\Certifications\Cassandra](https://academy.datastax.com/#/online-courses/6167eee3-0575-4d88-9f80-f2270587ce23)
@@ -961,6 +964,11 @@ READ_REPAIR                  0
 ## What is D210 Course about
 
 * Operations for Apache Cassandra™ and DataStax Enterprise
+* Installation
+  * echo "deb https://debian.datastax.com/enterprise stable main" | sudo tee -a /etc/apt/sources.list.d/datastax.sources.list
+  * curl -L https://debian.datastax.com/debian/repo_key | sudo apt-key add -
+  * sudo apt-get update
+  * sudo apt-get install dse-full
 
 ## What are basic parameter required for Cassandra quickstart
 
@@ -1060,8 +1068,10 @@ READ_REPAIR                  0
 ```
 *  Distribution can be any among fom, EXTREME, EXP, GAUSS, UNIFORM, FIXED
 * cassandra-stress user profile=/home/cassandra/TestProfile.yaml ops\(insert=10000, user_by_email=100000\) -node node-ds210-node1
+* cassandra-stress user profile=TestProfile.yml ops\(insert=2,user_by_email=2\) no-warmup -rate threads<=54
+* cassandra-stress user profile=TestProfile.yml ops\(insert=2000,user_by_email=2\) no-warmup -rate threads'<=32'
 
-ubuntu@ds210-node1:~/labwork$ cassandra-stress user profile=TestProfile.yaml ops\(insert=100000 user_by_email=100000\) -node ds210-node1
+ubuntu@ds210-node1:~/labwork$ cassandra-stress user profile=TestProfile.yaml ops\(insert=100000,user_by_email=100000\) -node ds210-node1
 There was a problem parsing the table cql: line 0:-1 mismatched input '<EOF>' expecting ')'
 
 ## Linux top command
@@ -1118,13 +1128,686 @@ There was a problem parsing the table cql: line 0:-1 mismatched input '<EOF>' ex
 * Paging should be usually be near zero (lots of paging is bad to performance)
 * System stats can be an indication of process contention (CSW - context switch)
 
+## Nodetool (Performance Analysis inside cluster node)
+
+* dstat, top - can investigate inside linux
+* nodetool - can investigate inside Cassandra JVM
+* Every Cache size hit ratio should be higher (should be above 80%)
+* Load - How much data is stored inside node
+
+```
+cqlsh:killr_video> exit
+root@c1bf4c2d5378:/# nodetool info
+ID                     : 020b9ef3-ae33-4c9f-902a-33eb7f9a753d
+Gossip active          : true
+Thrift active          : false
+Native Transport active: true
+Load                   : 571.88 KiB
+Generation No          : 1625291106
+Uptime (seconds)       : 35986
+Heap Memory (MB)       : 209.83 / 998.44
+Off Heap Memory (MB)   : 0.01
+Data Center            : datacenter1
+Rack                   : rack1
+Exceptions             : 0
+Key Cache              : entries 3721, size 323.3 KiB, capacity 49 MiB, 6138479 hits, 6142208 requests, 0.999 recent hit rate, 14400 save period in seconds
+Row Cache              : entries 0, size 0 bytes, capacity 0 bytes, 0 hits, 0 requests, NaN recent hit rate, 0 save period in seconds
+Counter Cache          : entries 0, size 0 bytes, capacity 24 MiB, 0 hits, 0 requests, NaN recent hit rate, 7200 save period in seconds
+Chunk Cache            : entries 27, size 1.69 MiB, capacity 217 MiB, 120 misses, 6150101 requests, 1.000 recent hit rate, NaN microseconds miss latency
+Percent Repaired       : 100.0%
+Token                  : (invoke with -T/--tokens to see all 256 tokens)
+```
+
+## Nodetool compaction-history - what are all the fields and output?
+
+```
+root@c1bf4c2d5378:/# nodetool compactionhistory
+Compaction History:
+id                                   keyspace_name columnfamily_name compacted_at            bytes_in bytes_out rows_merged
+e01933a0-dc04-11eb-bef5-537733e6a124 system        size_estimates    2021-07-03T13:45:06.266 169066   41854     {4:4}
+e0175ee0-dc04-11eb-bef5-537733e6a124 system        sstable_activity  2021-07-03T13:45:06.254 1102     224       {1:12, 4:4}
+bacb1140-dbeb-11eb-bef5-537733e6a124 system        size_estimates    2021-07-03T10:45:06.260 169604   41922     {4:4}
+bac8ee60-dbeb-11eb-bef5-537733e6a124 system        sstable_activity  2021-07-03T10:45:06.246 968      224       {1:8, 3:1, 4:3}
+```
+
+
+## To figure out the name of a node’s datacenter and rack, which nodetool sub-command should you use? 
+
+* Nodetool info
+
+## Nodetool gcstats
+
+* Higher the GC Elapsed time is worst performance of the cluster
+* Higher StdDev, cluster performance would be erratic
+
+```bash
+root@c1bf4c2d5378:/# nodetool gcstats
+       Interval (ms) Max GC Elapsed (ms)Total GC Elapsed (ms)Stdev GC Elapsed (ms)   GC Reclaimed (MB)         Collections      Direct Memory Bytes
+                 334                   0                   0                 NaN                   0                   0                       -1
+root@c1bf4c2d5378:/# nodetool gcstats
+       Interval (ms) Max GC Elapsed (ms)Total GC Elapsed (ms)Stdev GC Elapsed (ms)   GC Reclaimed (MB)         Collections      Direct Memory Bytes
+                2057                   0                   0                 NaN                   0                   0                       -1
+root@c1bf4c2d5378:/# nodetool gcstats
+       Interval (ms) Max GC Elapsed (ms)Total GC Elapsed (ms)Stdev GC Elapsed (ms)   GC Reclaimed (MB)         Collections      Direct Memory Bytes
+                1307                   0                   0                 NaN                   0                   0                       -1
+```
+
+## Nodetool Gossipinfo
+
+* What is the status of the node according its peer node
+* Peer node knows the detaila about another node using 'gossipe-info'
+* Schema-Version mismatch can be noted from this output. Rare but crucial information.
+
+## Nodetool Ring command
+
+* "nodetool ring" is used to output all the tokens of a node.
+* nodetool ring -- ks_killr_vide -- for specific keyspace
+* ```bash
+  root@c1bf4c2d5378:/# nodetool ring -- killr_video | head
+
+  Datacenter: datacenter1
+  ==========
+  Address     Rack        Status State   Load            Owns                Token
+                                                                            9187745666723249887
+  172.19.0.3  rack1       Up     Normal  624.25 KiB      100.00%             -9143401694522716388
+  172.19.0.3  rack1       Up     Normal  624.25 KiB      100.00%             -9002139349711660790
+  172.19.0.3  rack1       Up     Normal  624.25 KiB      100.00%             -8851720287326751527
+  172.19.0.3  rack1       Up     Normal  624.25 KiB      100.00%             -8617136159627124213
+  172.19.0.3  rack1       Up     Normal  624.25 KiB      100.00%             -8578864381590385349
+  ```
+* 
+
+## Nodetool Tableinfo (tablestats) - Quite useful for data-modelling information
+
+* nodetool tablestats -- ks_killr_video
+* nodetool tablestats -- ks_killr_video user_by_email
+*    ```bash
+    root@c1bf4c2d5378:/# nodetool tablestats -- killr_video
+    Total number of tables: 37
+    ----------------
+    Keyspace : killr_video
+            Read Count: 3952653
+            Read Latency: 2.332187202873614 ms
+            Write Count: 12577242
+            Write Latency: 0.026214161419490855 ms
+            Pending Flushes: 0
+                    Table: user_by_email
+                    SSTable count: 3
+                    Space used (live): 321599
+                    Space used (total): 321599
+                    Space used by snapshots (total): 0
+                    Off heap memory used (total): 5745
+                    SSTable Compression Ratio: 0.6803828095486517
+                    Number of partitions (estimate): 2468
+                    Memtable cell count: 1809586
+                    Memtable data size: 103656
+                    Memtable off heap memory used: 0
+                    Memtable switch count: 3
+                    Local read count: 3952653
+                    Local read latency: 0.030 ms
+                    Local write count: 12577242
+                    Local write latency: 0.003 ms
+                    Pending flushes: 0
+                    Percent repaired: 0.0
+                    Bloom filter false positives: 0
+                    Bloom filter false ratio: 0.00000
+                    Bloom filter space used: 4680
+                    Bloom filter off heap memory used: 4656
+                    Index summary off heap memory used: 1041
+                    Compression metadata off heap memory used: 48
+                    Compacted partition minimum bytes: 61
+                    Compacted partition maximum bytes: 86
+                    Compacted partition mean bytes: 84
+                    Average live cells per slice (last five minutes): 1.0
+                    Maximum live cells per slice (last five minutes): 1
+                    Average tombstones per slice (last five minutes): 1.0
+                    Maximum tombstones per slice (last five minutes): 1
+                    Dropped Mutations: 6
+    ```
+*  Table histogram helps to find how much time taken for read/vs/write
+```bash    
+killr_video/user_by_email histograms
+Percentile  SSTables     Write Latency      Read Latency    Partition Size        Cell Count
+                              (micros)          (micros)           (bytes)
+50%             0.00              0.00              0.00                86                 2
+75%             0.00              0.00              0.00                86                 2
+95%             0.00              0.00              0.00                86                 2
+98%             0.00              0.00              0.00                86                 2
+99%             0.00              0.00              0.00                86                 2
+Min             0.00              0.00              0.00                61                 2
+Max             0.00              0.00              0.00                86                 2
+```
+## How to find large partition?
+
+* nodetool tablehistograms ks_killr_video  table -- would give multi-millions cell-count
+* nodetool tablehistograms ks_killr_video  table -- would give large partition-size
+
+
+## Nodetool Threadpoolinfo (tpstats)
+
+* Early versions of Cassandra were designed using SEDA architectures (now it actually moved away from it)
+* If queue is blocked, the request is blocked
+* if MemtableFlushWriter is blocked, Cassandra unable to write to disk
+  * If blocked, lots of data is sitting in memory, sooner Long-GC might kick-in
+
+
+## Cassandra logging
+
+* It is ususally known as system.log (and debug.log only if enabled in logback.xml or using nodetool setlogginglevel )
+* java gc.log is also available to investigate gc (garbage collection)
+* /var/log/cassandra/system.log
+* syste.log (INFO and above)
+* logging location can be changed in /etc/dse/cassandra/jvm.options or -DCassandra.logdir=<LOG_DIR>
+* default configurations are in /etc/cassandra/logback.xml
+* Change logging level for live systems
+  * nodetool setlogginglevel org.apache.cassandra.service.StorageProxy DEBUG
+  * nodetool getlogginglevel
+
+## Cassandra JVM GC logging
+
+* GC logging answeres 3 questions
+  * When GC occured
+  * How much memory reclaimed
+  * What is the heap memory before an after reclaim (on the heap)
+* GC logging details are configured /etc/cassandra/jvm.options
+* Cassandra doesn't use G1 garbage collection
+
+## How Cassandra JVM GC logging can be configured
+
+* How it was turn it on
+  * -Xloggc:/var/log/cassandra/gc.log  (in the cassandra start script)
+* -XX:+PrintGC   (refer jvm.options for mroe documentation and options)
+* Dynamically alter JVM process GC.log
+  * info -flag +PrintGC <process-id>
+
+## How to read GC.log?
+
+* GC pause in a second or two is big trouble, it should have been in sub-milli-seconds
+* Ensure after GC, heap consumption is reduced (number should reduce)
+
+## Adding a node
+
+* Why to add node? 
+  * To increase capacity for operational head-room
+  * Reached maxmum h/w capcity
+  * Reached maxmum traffic capcity
+    * To decrease latency of the application
+* How to add nodes for single-token nodes?
+  * Always double to capcity of your cluster
+  * Token ranges has to bisect each of the existing clutser ranges
+* How to add nodes for Vnodes cluster?
+  * Add single node in incremental fashion
+* Can we add multiple node at the same time?
+  * Not recommended, but possible
+* What is the impact of adding single node?
+  * Lots of data movement into the new-node
+  * We may need to remove excess copy for old nodes
+  * Will have gradual impact on performance of the cluster
+  * Will take longer to grow the cluster
+* VNodes make it simple to add node
+* Seed - nodes, Any node that is running while adding other nodes. They are not special in any way
+
+
+## Bootstrapping (Adding a note)
+
+* We need any existing running nodes as seed-nodes (they are not special nodes)
+* (Adding cluster) Topology changes (adding/removing nodes) are not recommended when there is a repair process alive in your cluster
+* Cluster-name has to match to join existing cluster
+
+
+## What are the steps followed by a boostrapping node when joining?
+
+1. Contact the seed nodes to learn about gossip state.
+1. Transition to Up and Joining state (to indicate it is joining the cluster; represented by UJ in the nodetool status).
+1. Contact the seed nodes to ensure schema agreement.
+1. Calculate the tokens that it will become responsible for.
+1. Stream replica data associated with the tokens it is responsible for from the former owners.
+1. Transition to Up and Normal state once streaming is complete (to indicate it is now part of the cluster; represented by UN in the nodetool status).
+
+## What are the help rendered by a existing node to a joining?
+
+* Cluster nodes has to prepare to stream necessary SSTables
+* Existing Cluster nodes continue to satisfy read and write, but also forward write to joining node
+* Monitor the bootstrap process using 'nodetool netstas'
+
+## Issues during bootstrap
+
+* New node will certainly have a lot of compactions to deal with(especially  if it is LCS).
+* New node should compact as much as before accepting read requests
+  * nodetool disablebinary && nodetool disablethrift && nodetooldisablegossip*
+    * Above will disconnect Cassandra from the cluster, but not stop Cassandra itself. At this point you can unthrottle compactions and let it compact away.
+* We should unthrottle during bootstrap as the node won't receive read queries until it finishes streaming and joins the cluster.
+
+## If Bootstrap fails
+
+* Read the log and find the reason
+* If it Up and failed with 50% data, try to restart.. mostly it would fix itself
+* if it further doesn't work, investigate further
+
+
+## After Boostrap (Cleanup)
+
+* Nodetool cleanup should be peformed to the other cluster nodes (not to the node that joined)
+* Cleans up keyspaces and partition keys no longer belonging to a node. (bootstrapped node would have taken some keys and reduced burden on this node)
+* Cleanup just reads all ss-table and throws-away all the keys not belong to the node, worst-case it just copies the sstable as is
+* It is almost like Compaction
+* nodetool [options] cleanup -- keyspace <table>
+
+
+## Removing node
+
+* Why to remove a node?
+  * For some event, we ramped-up, need to scale down for legitimate reason
+  * Replacing h/w, or faulty node
+* We can't just shutdown and leave
+* 3 ways to remove the node
+  1. Inform the leaving node that, this node would be taken away, so it would redistribute its data to the rest of the cluster
+     * nodetool decommission
+        * It was properly redistributed
+        * Shutting down the port and shutting down process
+        * Data still on the disk, but should be deleted if we plan to bring the node back
+  1. Inform to the rest of the cluster nodes, that a node was removed/lost
+     * nodetool removenode
+  1. Inform the node to just leave immediately without replicating any of its data
+     * nodetool assasinate  (like kill -9) && nodetool repair (on the rest of the ndoes to fix)
+     * Try when it is not trying to go away
+
+## Where is the data coming from when a node is removed?
+
+* Decommision - Data comes from the node leaving
+* RemoveNode - Data comes from the rest of the cluster nodes
+
+## How to replace a down-node
+
+* Replace vs Remove-and-Add
+* Backup for a node will work a replaced node, because same tokens are used to bring replaced node into cluster
+* Best option is replace instead of remove-and-add
+* -Dcassandra.replace_address=<IP_ADDRESS_OF_DEAD_NODE> // has to change in JVM.options
+  * Above line informs cluster that node will have same range of tokens as existing dead node
+* Once replaced, we should remove  -Dcassandra.replace_address=<IP_ADDRESS_OF_DEAD_NODE>
+* We should update seed-node (remove old node, and update with latest IP), to fix GossipInfo
+
+
+## Why replace a node than removing-and-adding?
+
+1. Don't need to move data twice
+1. Backup would work for th replaced node (if the token range is same)
+1. It is faster and lesser impact on the cluster
+
+## STCS - Size Tieres Compaction Strategy
+
+* STCS Organizes SSTables into Tiers based on sizes
+  * On an exponential scale
+* Multiple SSTables would become (larger or smaller)
+  * Smaller - when plenty of deltes
+  * Largers - Sum of size of smaller SSTables (when there is no delete in smaller sstable)
+* Lower-tier means smaller SStables
+* Higher-tier means larger SStables
+* min_threshold and max_thrshold (number of files within the tier)
+
+## STCS Pros and Disadvantage
+
+* STCS doesn't compact 1 GB and 1MB file together
+  * Avoids write amplification
+  * Handles write heavy system very well
+* STCS requires of at least twice the data size (Space amplification)
+* How do we combine 4 * 128MB file, we require 512MB additional space to combine them (at-least 50%)
+* Stale records in Larger SSTables take unnecessary space (old file would take time to catchup)
+* Concurrent_Compactors - Failed more often than helping.
+* STCS - Major compaction was not recommended for producton (one big large compacted file) - Never do 'nodetool compact'
+## STCS Hotness
+
+* STCS compaction chooses hottest tier first to compact
+* SSTable hotness determined by number of reads per second per partition key
+## Wht STCS is slower for read
+
+* If new write is in lower tier, and old values are in higher tier, they can't be compacted together (immediately)
+
+## What triggers a STCS Compaction
+
+* More write --> More Compaction
+* Compaction starts every time a memtable flushes to an SSTable
+* MemTable too large, commit log too large or manual flush (Triggering events)
+* When the cluster streams SSTable segments to the node
+  * Bootstrap, rebuild, repair
+* Compaction continues until there are no more tiers with at least min_threshold tables in it  
+
+## STCS - Tombstones
+
+* If no eligible buckets, STCS compacts a single SSTable
+* tombstone_compaction_interval - At-least one day old before considered for Tombstone compaction
+* Compaction ensures that tombstones donot overlap old records in other SSTables
+* The number of expired tombstones must be above 20%
+
+## LCS - Leveled Compaction Strategy
+
+* sstable_size_in_mb - Max size of SSTable
+  * 'Max SSTable Size' - would be considered like unit size for compaction to trigger
+* When there are more than 10 SSTables, they are combined and level is promoted
+* Every higher level would be 10times bigger than their lower levels
+* LCS - limits space amplification, but it ends in higher write amplification
+* L0 - is landing place
+
+## LCS Pros and Cons
+
+* LCS is best for reads
+  * 90% of the data resides in the lowest level
+  * Each partition resides in only one table
+* LCS is not suitable for more writes than reads, but suits occasional writes but high reads
+* Reads are handled only by few SSTable make it faster
+* LCS - doesn't require 50% space, it wastes less disk space  
+
+## LCS - Lagging behind
+
+* If lower levels are two big, LCS falls back to STCS for L0 compaction
+* Falling to STCS would helps to create larger SSTable, and compacting two larger SSTable is optimum
+
+
+## LeveledCompactionStrategy
+
+* [LCS Cassandra](https://issues.apache.org/jira/browse/CASSANDRA-14605?jql=labels%20%3D%20lcs%20AND%20project%20in%20(Cassandra))
+
+## TWCS - Time-window compaction strategies
+
+* Best suited for Time-series data
+* Windowf of time can be chosen while creating Table
+* STCS is used within the timewindow
+* Any SSTable that spans two window will be considered for next window
+* Not suited for data that is being updated
+
+## Nodesync (Datastax Enterprise 6.0)
+
+* Continuous background repair
+  * only for DSE-6.0 and above
+  * Repair - doesn't mean something broken, rather preventing anti-entropy
+* Low overhead, Consistency performance, Doesn't use Merkel tree
+* Predicatable synchronization overhead, and easier than repair
+* 
+  ```sql 
+    create table mytable (k int primary key) with nodesync = {'enabled': 'true', 'deadline_target_sec: 'true'}; 
+    nodetool nodesyncservice setrate <value_in_kb_per_sec>
+    nodetool nodesyncservice getrate
+  ```
+* Parameters
+  * Rate -- how much bandwidth could be used (between rate and target --- rate always wins)
+  * Target -- (lesser than gc_grace_seconds)
+* nodetool nodesync vs dse/bin/nodesync (second binary is cluster-wide tool)
+
+## What are all the possible reason for large SSTable
+
+* nodetool compact (somebody run it)
+  * Major compaction using STCS would create large SSTable
+* LCS (over period of time created large SSTable)
+* We need to split the file sometime (anti-compaction)
+* Warning before using SSTablesplit (don't run on live system)
+* 
+  ```bash
+  sudo service cassandra stop
+  sstablesplit -s 40 /user/share/data/cssandra/killr_video/users/*
+  ```
+
+## Multi-Datacenter
+
+* We can add datacenter using `alter keyspace` even before datacenter is available
+* Cassandra allows to add datacenter to live system
+* conf/cassandra-rackdc.properties
+* Snitch is control where the data is.
+* NetworkTopologyStrategy - is the one that achieves the distribution (among DC, controlled by Snitch)
+* Replication values can be per-datacenter
+* DC level information are per keyspace level (not table level)
+* 
+  ```sql
+    alter keyspace killr_video with replication = {'class': 'NetworkTopologyStrategy', 'DC1': 2, 'DC2': 2}
+  ```
+* nodetool reubuild -- name-of-existing-datacenter
+* Run 'nodetool rebuild' specifying the existing datacenter on all the nodes in the new DC
+* Without above, request with LOCAL_ONE or ONE consistency level may fail if the existing DC are not completely in sync
+## Multi-Datacenter Consistency Level
+
+* Local_Quorum - TO reduce latency
+* Each - Very heavy operation
+* Snitch should be specified
+## What if one datacenter goes down?
+
+* Gossip will find that DC is down
+* Reocvery can be accomplished with a rolling repair to all nodes in failed datacenter
+* Hints would be piling up in other datacenters (that is receiving updates)
+* We should run-repair if we go beyond GC_Grace_seconds
+
+## Why we need additional DC?
+
+* Live Backup
+* Improved Performance
+* Analytics vs Transaction workload 
+
+## SSTableDump
+
+1. Old tool, quite useful
+1. Only way to dump SSTable into json (for investigation purpose)
+1. Useful to diagnose SSTable ttl and tombostone
+1. Usage
+   1. tools/bin/sstable data/ks/table/sstable-data.db
+   1. -d to view as key-value (withtout JSON)
+
+## SSTableloader
+
+1. sstableloader -d co-ordinator-ip /var/lib/cassandra/data/killrvideo/users/
+1. Load existing data in SSTable format into another cluster (production to test)
+1. Useful to upgrade data from one enviroment to another environment (migrating to new DC)
+1. It adheres to replication factor of target cluster
+1. Tables are repaired in target cluster after being loaded
+1. Fastest way to load the data
+1. Source should be a running node with proper Cassandra.yaml file
+1. Atleast one node in the cluster is configured as SEED
+1. sample dump
+    ```json
+    [
+      {
+        "partition" : {
+          "key" : [ "36111c91-4744-47ad-9874-79c2ecb36ea7" ],
+          "position" : 0
+        },
+        "rows" : [
+          {
+            "type" : "row",
+            "position" : 30,
+            "liveness_info" : { "tstamp" : "2021-07-06T03:38:20.642757Z" },
+            "cells" : [
+              { "name" : "v", "value" : 1 }
+            ]
+          }
+        ]
+      },
+      {
+        "partition" : {
+          "key" : [ "ec07b617-1348-42b8-afb1-913ff531a24c" ],
+          "position" : 43
+        },
+        "rows" : [
+          {
+            "type" : "row",
+            "position" : 73,
+            "cells" : [
+              { "name" : "v", "value" : 2, "tstamp" : "2021-07-06T03:39:12.173004Z" }
+            ]
+          }
+        ]
+      },
+      {
+        "partition" : {
+          "key" : [ "91d7d620-de0b-11eb-ad2f-537733e6a124" ],
+          "position" : 86
+        },
+        "rows" : [
+          {
+            "type" : "row",
+            "position" : 116,
+            "liveness_info" : { "tstamp" : "2021-07-06T03:38:03.777666Z" },
+            "cells" : [
+              { "name" : "v", "deletion_info" : { "local_delete_time" : "2021-07-06T09:06:57Z" },
+                "tstamp" : "2021-07-06T09:06:57.504609Z"
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "partition" : {
+          "key" : [ "7164f397-f1cb-4341-bc83-ac10088d5bfd" ],
+          "position" : 128
+        },
+        "rows" : [
+          {
+            "type" : "row",
+            "position" : 158,
+            "cells" : [
+              { "name" : "v", "value" : 2, "tstamp" : "2021-07-06T03:38:56.888661Z" }
+            ]
+          }
+        ]
+      }
+    ]
+    ```
+
+## Loading different formats of data into Cassandra
+
+1. Apache Spark for Dataloading
+1. 
+    ```python
+    from pyspark import SparkConf
+    import pyspark_cassandra
+    from pyspark_cassandra import CassandraSparkContext
+
+    conf = SparkConf().set("spark.cassandra.connection.host", <IP1>).set("spark.cassandra.connection.native.port",<IP2>)
+
+    sparkContext = CassandraSparkContext(conf = conf)
+    rdd = sparkContext.parallelize([{"validated":False, "sampleId":"323112121", "id":"121224235-11e5-9023-23789786ess" }])
+    rdd.saveToCassandra("ks", "test", {"validated", "sample_id", "id"} )
+    ```
+1. Loading a CSV file into a Cassandra table with validation:
+```scala
+import com.datastax.spark.connector._
+import com.datastax.spark.connector.cql._
+import org.apache.spark.SparkContext
+
+//Preparing SparkContext to work with Cassandra
+val conf = new SparkConf(true).set("spark.cassandra.connection.host", "192.168.123.10")
+        .set("spark.cassandra.auth.username", "cassandra")            
+        .set("spark.cassandra.auth.password", "cassandra")
+val sc = new SparkContext("spark://192.168.123.10:7077", "test", conf)
+val beforeCount = sc.cassandraTable("killrvideo", "users").count
+val users = sc.textFile("file:///home/student/users.csv").repartition(2 * sc.defaultParallelism).cache // The RDD is used in two actions
+val loadCount = users.count
+users.map(line => line.split(",") match {
+      case Array(id, firstname, lastname, email, created_date)    => User(java.util.UUID.fromString(id), firstname, lastname, email, new java.text.SimpleDateFormat("yyyy-mm-dd").parse(created_date))
+  }
+).saveToCassandra("killrvideo", "users")
+val afterCount = sc.cassandraTable("killrvideo", "users").count
+if (loadCount - (afterCount - beforeCount) > 0)
+  println ("Errors or upserts - further validation required")
+```
+
+## Datstax - DSE Bulk (configuration should be in HOCON format)
+
+1. CLI import tool (from csv or json)
+1. Can move to and from files in the file-system
+1. Why DSE Bulk?
+  1. Casandra-loader is not formally supported, SSTableLoader data should be in SSTable format
+  1. CQLSH Copy is not performant
+  1. Can be used as format for backup
+  1. Unload and reformat as different data-model
+1. Usage: dsbulk -f dsbulk.conf -c csv/json -k keyspace -t tablename
+
+## Backup and Snapshots
+
+1. Why do we need your backup for distributed data?
+  1. Human error caused data wipe
+  1. Somebody thought they are dropping data in UAT, but it was production
+  1. Programmatic accidental deletion or overwriting data
+  1. Wrong procedure followed and lost data
+1. SSTables are immutable, we can just copy them for backup purpose
+1. usage - nodetool -h localhost -p 7199 snapshot mykeyspace
+
+
+## What is Cassandra snapshots?
+1. The DDL to create the table is stored as well.
+1. A snapshot is a copy of a table’s SSTable files at a given time, created via hard links.
+1. Hardlink snapshots are acting as Point-in-Time backup 
+## Why Snapshots are fast in Cassandra? How to snapshot at the same time?
+
+* It just creates hard-links to underlying SSTable (immutable files)
+* Actual files are not copied, hence less (zero) data-movement
+* A parallel SSH tool can be used to snapshot at the same time.
+
+## How do incrementa backup works
+
+* Every flush to disk should be added to snapshots
+  * incremental_backup: true --##cassandra.yaml
+* Snapshot is required (before incremental backups) in-order for incremental backup to work (pre-requisite)
+* Snapshot informations are stored under "snapshots/directory"
+* incremental backups  are stored under "backups/directory"
+* incremental backups - are not automatically removed (warning would pile-up)
+  * These should be manually removed before creating new snapshot
+
+## Where to store snapshots?
+
+* Snapshots and incremental backups are stored on each cassandra-node
+* Files should be copied to remote place (not on node)
+  * [tablesnap can store to AWS S3](https://github.com/JeremyGrosser/tablesnap)
+
+## How Truncate works?
+
+* auto_snapshot is critical, don't disable it
+* Helps to take Snapshots, just before table truncation.
+
+## How to snapshot?
+
+* bin/nodetool snapshot -cf table - t <tag> -- keyspace keyspace2
+* [How to snapshot and restore](https://docs.rackspace.com/blog/apache-casandra-backup-and-recovery/)
+
+## Restore (We get 1 point for backup, 99 point for restore)
+
+* Backup that doesn't help to restore is useless
+* Restore should be tested many times and documented properly
+
+## [Steps to restore from snapshots](https://community.datastax.com/questions/2345/how-to-restore-cassandra-snapshot-to-a-different-k.html)
+
+1. Delete the current data files 
+1. Copy the snapshot and incremental files to the appropriate data directories
+1. The table schema must already be present in order to use this method
+1. If using incremental backups
+   1. Copy the contents of the backups/ directory to each table directory
+1. Restart and repair the node after the file copying is done
+Honorable mention – tablesnap and tablerestore
+• Used when backing up Cassandra to AWS S3
+## How to remove snapshots?
+
+* nodetool clearsnapshot <snapshot_name>
+  * Not specifying a snapshot name removes all snapshots
+* Remember to remove old snapshots before taking new ones, not automatic
+
+## JVM settings
+
+1. jvm.options can be used to modify jvm settings
+1. cassandra-env.sh is a shell that launches cassandra server, that uses jvm.options
+1. MAX_HEAP_SIZE : -Xmx8G
+1. HEAP_NEW_SIZE : -XX:NewSize=100m
+1. Java 9 by default uses G1 Collector
 
 
 ## Lab notes
 
 * 172.18.0.2
-* 
+* /usr/share/dse/data
+* /var/lib/cassandra/data
 
+
+## Cassandra people
+
+* [Jamie King](https://twitter.com/mrcompscience)
+* [Jonathan Ellis](https://twitter.com/spyced)
+* [Patrick McFadin](https://twitter.com/patrickmcfadin?lang=en)
+* 
 ## How to create anki from this markdown file
 
 ```
@@ -1492,7 +2175,67 @@ for val in session.execute("select * from videos_by_tag"):
 ```
 * [WORKSHOP: Opensource Tools for Apache Cassandra 24 Nov 20. Adam Zegelin SVP Engineering, Instaclustr](https://www.youtube.com/watch?v=v1zkqHfSSUE)
 * [Best Practices of Cassandra in Production](https://www.youtube.com/watch?v=P6UkQJrEQyU)
-## If 10 nodes equally sharing data with RF=3, if we try to repair 'nodetool repair on 3', How many node will be involved in repair
+## What is repair?
+
+* Repair ensures that all replicas have identical copies of a given partition
+* Data won't be in sync due to eventual consistency pattern, Merkel-Tree based reconciliation would help to fix the data.
+* It is also called anti-entropy repair.
+* [Cassandra reaper](http://cassandra-reaper.io/) is famous tool for scheduling repair
+* Reaper and nodetool repair works slightly different
+* Reaper repair mode
+  * sequential
+  * requiresParallelism  (Building merkle-tree or validation compaction would be parallel)
+  * datacenter_aware
+    * It is like sequential but one node per each DC
+
+## Repair command
+
+* 
+  ```bash
+  nodetool <options> repair
+  --dc <dc_name> identify data centers
+  --pr <partitioner-range> repair only primary range
+  --st <start_token> used when repairing a subrange
+  --et <end_token> used when repairing a subrange
+  ```
+
+## Why repairs are necessary?
+
+* Nodes may go down for a period of time and miss writes
+  * Especially if down for more than max_hint_window_in_ms
+* If nodes become overloaded and drop writes
+* if dropped mutation is high repair was missing in its place
+
+## Repair guideline
+
+* Make sure repair completes within gc_grace_seconds window
+* Repair should be scheduled once before every gc_grace_seconds
+
+## What is Primary Range Repair?
+
+* The primary range is the set of tokens the node is assigned
+* Repairing only the node's primary range will make sure that data is synchronized for that range
+* Repairing only the node's primary range will eliminate reduandant repairs
+
+## How does repair work?
+
+1. Nodes build merkel-trees from partitions to represent how current data values are
+1. Nodes exchange merkel trees
+1. Nodes compare the merkel trees to identify specific values that need synchronization
+1. Nodes exchange data values and update their data
+
+## Events that trigger Repair
+
+* 'CL=Quorum' - Read would trigger the repair
+* Random repair (even for non-quorum read)
+  * read_repair_chance
+  * dclocal_read-repair_chance
+* Nodetool repair - externally triggered
+
+## Dropped Mutation vs Repair
+
+
+## If 10 nodes equally sharing data with RF=3, if we try to repair 'nodetool repair on node-3', How many node will be involved in repair?
 
 * 5 nodes.
 * Node-3 will replicate its data to 2 other nodes (N3 (primary) + N4 (copy-1)  + N5 (copy-2) )
@@ -1504,7 +2247,7 @@ for val in session.execute("select * from videos_by_tag"):
 * nodetool -pr node-3 --But we have to run in all the nodes immediately
 * runing nodetool -pr on only one node is **not-recommended**
 
-## If we run full repair on a 'n' node cluster with RF=3, How many times we repairing the data 
+## If we run full repair on a 'n' node cluster with RF=3, How many times we are repairing the data?
 
 * We repair thrice.
 
@@ -1519,18 +2262,6 @@ for val in session.execute("select * from videos_by_tag"):
 * [All the options of nodetool-repair](https://cassandra.apache.org/doc/latest/tools/nodetool/repair.html#nodetool-repair)
 * [Cassandra documentation](https://cassandra.apache.org/doc/latest/operating/repair.html)
 * [Datastax documentation](https://docs.datastax.com/en/cassandra-oss/3.x/cassandra/tools/toolsRepair.html)
-
-## What is repair?
-
-* Data won't be in sync due to eventual consistency pattern, Merkle-Tree based reconciliation would help to fix the data. 
-* It is also called anti-entropy repair. 
-* [Cassandra reaper](http://cassandra-reaper.io/) is famous tool for scheduling repair
-* Reaper and nodetool repair works slightly different
-* Reaper repair mode
-  * sequential
-  * requiresParallelism  (Building merkle-tree or validation compaction would be parallel)
-  * datacenter_aware
-    * It is like sequential but one node per each DC
 
 ## Repair and some number related to time
 
@@ -2229,7 +2960,7 @@ try (CqlSession session = ...) {
 
 
 
-## Create Keyspace
+## Create Keyspace (and use it)
 
 ```sql
 ## Only when cluster replication exercise
@@ -2237,7 +2968,11 @@ CREATE KEYSPACE killrvideo WITH replication = {'class': 'NetworkTopologyStrategy
 
 CREATE KEYSPACE killrvideo WITH replication = {'class': 'SimpleStrategy', 'replication_factor': 1 };
 USE killrvideo;
+```
 
+## Create TABLE and load/export data in and out-of-tables
+
+```sql
 CREATE TABLE videos (video_id uuid,added_date timestamp,title text,PRIMARY KEY ((video_id)));
 insert into videos (video_id, added_date, title) values (5645f8bd-14bd-11e5-af1a-8638355b8e3a, '2014-02-28','Cassndra History')
 
@@ -2252,6 +2987,12 @@ COPY videos_by_tag(tag, video_id, added_date, title) FROM '/videos-by-tag.csv' W
 INSERT INTO killrvideo.videos_by_tag (tag, added_date, video_id, title) VALUES ('cassandra', '2016-2-8', uuid(), 'Me Lava Cassandra');
 UPDATE killrvideo.videos_by_tag SET title = 'Me LovEEEEEEEE Cassandra' WHERE tag = 'cassandra' AND added_date = '2016-02-08' AND video_id = paste_your_video_id;
 
+--Export data
+COPY vidoes(video_id, added_date, title) TO '/tmp/videos.csv' WITH HEADER=TRUE;
+```
+## How to select token values of primary-key
+
+```sql
 SELECT token(tag), tag FROM killrvideo.videos_by_tag;
 --output of gossip-info
 system.token(tag)    | tag
@@ -2261,10 +3002,25 @@ system.token(tag)    | tag
    356242581507269238 | cassandra
    356242581507269238 | cassandra
    356242581507269238 | cassandra
-
---Export data
-COPY vidoes(video_id, added_date, title) TO '/tmp/videos.csv' WITH HEADER=TRUE;
 ```
+
+## CQL Copy and rules
+
+* Cassandra expects same number of columns in every row (in delimited file)
+* Number of columns should match the table
+* Empty data in column is assumed by default as NULL value
+* COPY from should not be used to dump entire data (could be in TB or PB)
+* For importing larger datasets, use DSBulk
+* Can be piped with standar-input and standrd-outpu
+
+## CQL Copy options
+
+1. DELIMITER
+1. HEADER
+1. CHUNKSIZE - 1000 (default)
+1. SKIPROW - number of rows to skip (for testing)
+
+
 
 ## How to list partition_key (or the actual token) along with other columns
 
@@ -2341,6 +3097,12 @@ system_traces
 
 * CLEAR
 
+## Cassandra Dual equivalent table and SQL
+
+```sql
+1. select now() from system.local;
+```
+
 ## Exit cqlsh
 
 * EXIT
@@ -2351,8 +3113,76 @@ system_traces
 
 * [A deep look at the CQL WHERE clause](https://www.datastax.com/blog/deep-look-cql-where-clause)
 
+## Storage Architecture
+
+* Only one commit log per cluster
+* Commit-logs are flused to sstables
+* When memtables are flushed to disk, they are written into SSTables (fast compression used by default)
+
+## SStable - settings in cassandra.yaml
+
+1. flush_compression: fast
+1. file_cache_enabled: false 
+    * The chunk cache will store recently accessed sections of the sstable in-memory as uncompressed buffers. - 32MB
+1. Memtable    
+   1. memtable_heap_space_in_mb: 2048
+   1. memtable_offheap_space_in_mb: 2048
+1. index_summary_capacity_in_mb (SSTable index summary)
+1. index_summary_resize_interval_in_minutes 
+   * How frequently index summaries should be resampled
+1. compaction_throughput_mb_per_sec: 64
+1. stream_entire_sstables: true
+1. max_value_size_in_mb: 256
+
+## What are the files part of SSTable
+
+* mb-1-big-Summary.db
+* mb-1-big-Index.db
+* mb-1-big-Filter.db
+* mb-1-big-Data.db
+* SSTable metata files
+  * mb-1-big-Digest.crc32
+  * mb-1-big-Statistics.db
+  * mb-1-big-CRC.db
+  * mb-1-big-Toc.txt -- list of the above files
+
+## What is the role of index file
+
+* It lists the partition-keys/cluster-keys that are available inside the SSTable
+
+## What is the role of statitics file
+
+* It has the column definition
+* It has almost all the details about DDL of a table
+
+
+
+## What is LSM (SS-Table)
+
+## Why SQLite4 didn't use LSM?
+
+* Every insert needs to check constraint, and it requires reads. In simple, every write operation also ends up with read operation.
+* LSM is great for blind writes, but doesn't work work as well when constraints must be checked prior to each write
+
+
+## LSM Pros and Cons
+
+* Pros
+   * Faster writes
+   * Reduced write amplification
+   * Linear Writes
+   * Less SSD Wear
+* Cons
+  * Slower Reads
+  * Background Merge process
+  * More space on disk
+  * Greater Complexity
+
+
 ## [What is in All of Those SSTable Files Not Just the Data One but All the Rest Too! (John Schulz, The Pythian Group) | Cassandra Summit 2016 ](https://www.slideshare.net/DataStax/what-is-in-all-of-those-sstable-files-not-just-the-data-one-but-all-the-rest-too-john-schulz-the-pythian-group-cassandra-summit-2016)
 ## [So you have a broken Cassandra SSTable file?](https://blog.pythian.com/so-you-have-a-broken-cassandra-sstable-file/)
+
+# [C23: Lessons from SQLite4 by SQLite.org - Richard Hipp ](https://www.slideshare.net/InsightTechnology/dbtstky2017-c23-sqlite?from_action=save)
 ## Time-series presentations
 
 1. (https://www.youtube.com/watch?v=nHes8XW1VHw)
@@ -2805,6 +3635,22 @@ ubuntu@ds201-node1:~/node/bin$
 * [CI-Cassandra-Build](https://ci-cassandra.apache.org/job/Cassandra-trunk/531/)
 * [CI Console log](https://ci-cassandra.apache.org/job/Cassandra-4.0-artifacts/jdk=jdk_1.8_latest,label=cassandra/59/consoleFull)
 
+## JIRA based on labels
+
+* [Consistency/Coordination](https://issues.apache.org/jira/browse/CASSANDRA-16773?jql=project%20%3D%20CASSANDRA%20AND%20component%20%3D%20%22Consistency%2FCoordination%22)
+* [Materialized View](https://issues.apache.org/jira/browse/CASSANDRA-16479?jql=project%20%3D%20CASSANDRA%20AND%20component%20%3D%20%22Feature%2FMaterialized%20Views%22)
+* [Sasi](https://issues.apache.org/jira/browse/CASSANDRA-16390?jql=project%20%3D%20CASSANDRA%20AND%20component%20%3D%20%22Feature%2FSASI%22)
+
+## JIRA Features in Cassandra
+
+* [All the Components](https://issues.apache.org/jira/projects/CASSANDRA?selectedItem=com.atlassian.jira.jira-projects-plugin:components-page)
+* [Local/SSTable](https://issues.apache.org/jira/browse/CASSANDRA-16772?jql=project%20%3D%20CASSANDRA%20AND%20component%20%3D%20%22Local%2FSSTable%22)
+* Local/Compaction/LCS
+* Feature/Lightweight Transactions
+* Consistency/Repair, Observability/Logging
+* Test/unit
+* Cluster/Schema
+* Tool/sstable
 ## Cassandra usages in famous producs
 
 * [Pega - decision management data](https://community.pega.com/knowledgebase/articles/decision-management/84/managing-cassandra-source-decision-management-data)
